# dijets

./: Cargo.toml  README.md  x.toml
client/assets-proof/: Cargo.toml
client/assets-proof/src/: lib.rs  main.rs
client/faucet/: Cargo.toml
client/faucet/src/: lib.rs  main.rs  mint.rs
client/json-rpc/: Cargo.toml
client/json-rpc/src/: broadcast_client.rs  lib.rs
common/bitvec/: Cargo.toml
common/bitvec/src/: lib.rs
common/bounded-executor/: Cargo.toml
common/bounded-executor/src/: lib.rs
common/channel/: Cargo.toml
common/channel/many-keys-stress-test/: Cargo.toml
common/channel/src/: diem_channel.rs  diem_channel_test.rs  lib.rs  message_queues.rs  message_queues_test.rs  test.rs
common/crash-handler/: Cargo.toml
common/crash-handler/src/: lib.rs
common/debug-interface/: Cargo.toml
common/debug-interface/src/: lib.rs  node_debug_service.rs
common/diemdoc/: Cargo.toml
common/diemdoc/src/: main.rs
common/fallible/: Cargo.toml
common/fallible/src/: copy_from_slice.rs  lib.rs
common/logger/: Cargo.toml
common/logger/derive/: Cargo.toml
common/logger/src/: counters.rs  dijets_logger.rs  event.rs  filter.rs  json_log.rs  kv.rs  lib.rs  logger.rs  macros.rs  metadata.rs  sample.rs  security.rs  struct_log.rs  tracing_adapter.rs
common/logger/tests/: derive.rs  logger.rs  logger_custom_format.rs  remote.rs  tracing_translation_tests.rs
common/metrics/: Cargo.toml  build.rs
common/metrics-core/: Cargo.toml
common/metrics-core/src/: lib.rs
common/metrics/src/: json_encoder.rs  json_metrics.rs  lib.rs  metric_server.rs  op_counters.rs  public_metrics.rs
common/proptest-helpers/: Cargo.toml
common/proptest-helpers/src/: growing_subset.rs  lib.rs  repeat_vec.rs  unit_tests.rs  value_generator.rs
common/proxy/: Cargo.toml
common/proxy/src/: lib.rs
common/rate-limiter/: Cargo.toml
common/rate-limiter/src/: async_lib.rs  lib.rs  main.rs  rate_limit.rs
common/retrier/: Cargo.toml
common/retrier/src/: lib.rs
common/subscription-service/: Cargo.toml
common/subscription-service/src/: lib.rs
common/temppath/: Cargo.toml
common/temppath/src/: lib.rs
config/: Cargo.toml
config/data/metrics/: prometheus.yml
config/generate-key/: Cargo.toml
config/generate-key/src/: lib.rs  main.rs
config/global-constants/: Cargo.toml
config/global-constants/src/: lib.rs
config/management/: Cargo.toml
config/management/genesis/: Cargo.toml
config/management/network-address-encryption/: Cargo.toml
config/management/operational/: Cargo.toml
config/management/src/: config.rs  error.rs  lib.rs  secure_backend.rs  storage.rs  transaction.rs  validator_config.rs  waypoint.rs
config/seed-peer-generator/: Cargo.toml
config/seed-peer-generator/src/: lib.rs  main.rs  utils.rs
config/src/: generator.rs  keys.rs  lib.rs  network_id.rs  utils.rs
config/src/config/: consensus_config.rs  debug_interface_config.rs  error.rs  execution_config.rs  json_rpc_config.rs  key_manager_config.rs  logger_config.rs  mempool_config.rs  mod.rs  network_config.rs  safety_rules_config.rs  secure_backend_config.rs  state_sync_config.rs  storage_config.rs  test_config.rs  upstream_config.rs
consensus/: Cargo.toml
consensus/consensus-types/: Cargo.toml
consensus/consensus-types/src/: block.rs  block_data.rs  block_retrieval.rs  block_test.rs  block_test_utils.rs  common.rs  epoch_retrieval.rs  executed_block.rs  lib.rs  proposal_msg.rs  quorum_cert.rs  safety_data.rs  sync_info.rs  timeout.rs  timeout_2chain.rs  timeout_certificate.rs  vote.rs  vote_data.rs  vote_msg.rs  vote_proposal.rs
consensus/safety-rules/: Cargo.toml
consensus/safety-rules/benches/: safety_rules.rs
consensus/safety-rules/src/: configurable_validator_signer.rs  consensus_state.rs  counters.rs  error.rs  fuzzing_utils.rs  lib.rs  local_client.rs  logging.rs  main.rs  persistent_safety_storage.rs  process.rs  remote_service.rs  safety_rules.rs  safety_rules_2chain.rs  safety_rules_manager.rs  serializer.rs  t_safety_rules.rs  test_utils.rs  thread.rs
consensus/safety-rules/tests/: binary.rs
consensus/src/: consensus_provider.rs  counters.rs  epoch_manager.rs  error.rs  lib.rs  logging.rs  metrics_safety_rules.rs  network.rs  network_interface.rs  network_tests.rs  pending_votes.rs  persistent_liveness_storage.rs  round_manager.rs  round_manager_fuzzing.rs  round_manager_test.rs  state_computer.rs  state_replication.rs  txn_manager.rs
consensus/src/block_storage/: block_store.rs  block_store_and_lec_recovery_test.rs  block_store_test.rs  block_tree.rs  mod.rs  sync_manager.rs  tracing.rs
consensus/src/consensusdb/: consensusdb_test.rs  mod.rs
consensus/src/experimental/: commit_phase.rs  errors.rs  execution_phase.rs  mod.rs  ordering_state_computer.rs
consensus/src/liveness/: leader_reputation.rs  leader_reputation_test.rs  mod.rs  proposal_generator.rs  proposal_generator_test.rs  proposer_election.rs  (+6 more)
dijets-node/: Cargo.toml
dijets-node/src/: lib.rs  main.rs
json-rpc/: Cargo.toml
json-rpc/integration-tests/: Cargo.toml
json-rpc/src/: counters.rs  data.rs  fuzzing.rs  lib.rs  methods.rs  runtime.rs  util.rs
json-rpc/types/: Cargo.toml
network/: Cargo.toml
network/benches/: network_bench.rs  socket_bench.rs
network/builder/: Cargo.toml
network/discovery/: Cargo.toml
network/memsocket/: Cargo.toml
network/netcore/: Cargo.toml
network/socket-bench-server/: Cargo.toml
network/src/: constants.rs  counters.rs  error.rs  fuzzing.rs  lib.rs  logging.rs
sdk/: Cargo.toml
sdk/client/: Cargo.toml
sdk/compatibility/: Cargo.toml
sdk/offchain/: Cargo.toml
sdk/src/: lib.rs  transaction_builder.rs  types.rs
sdk/transaction-builder/: Cargo.toml
state-sync/: Cargo.toml
state-sync/src/: bootstrapper.rs  chunk_request.rs  chunk_response.rs  client.rs  coordinator.rs  counters.rs  error.rs  executor_proxy.rs  fuzzing.rs  lib.rs  logging.rs  network.rs  request_manager.rs  shared_components.rs
state-sync/tests/: integration_tests.rs  test_harness.rs
vm-validator/: Cargo.toml
vm-validator/src/: lib.rs  vm_validator.rs
(+2003 files in other folders)
