[workspace]
resolver = "2"

members = [
    "client/assets-proof",
    "client/faucet",
    "client/json-rpc",
    "client/swiss-knife",
    "common/bitvec",
    "common/bounded-executor",
    "common/channel",
    "common/channel/many-keys-stress-test",
    "common/crash-handler",
    "common/debug-interface",
    "common/dijetsdoc",
    "common/fallible",
    "common/infallible",
    "common/logger",
    "common/logger/derive",
    "common/metrics",
    "common/metrics-core",
    "common/num-variants",
    "common/proptest-helpers",
    "common/proxy",
    "common/rate-limiter",
    "common/retrier",
    "common/short-hex-str",
    "common/subscription-service",
    "common/temppath",
    "common/time-service",
    "common/workspace-hack",
    "config",
    "config/generate-key",
    "config/global-constants",
    "config/management",
    "config/management/genesis",
    "config/management/network-address-encryption",
    "config/management/operational",
    "config/seed-peer-generator",
    "consensus",
    "consensus/consensus-types",
    "consensus/safety-rules",
    "crypto/crypto",
    "crypto/crypto-derive",
    "devtools/x",
    "devtools/x-core",
    "devtools/x-lint",
    "dijets-node",
    "execution/db-bootstrapper",
    "execution/execution-correctness",
    "execution/executor",
    "execution/executor-benchmark",
    "execution/executor-test-helpers",
    "execution/executor-types",
    "json-rpc",
    "json-rpc/integration-tests",
    "json-rpc/types",
    "json-rpc/types/proto",
    "language/benchmarks",
    "language/borrow-graph",
    "language/bytecode-verifier",
    "language/bytecode-verifier/bytecode-verifier-tests",
    "language/bytecode-verifier/invalid-mutations",
    "language/bytecode-verifier/transactional-tests",
    "language/compiler",
    "language/compiler/bytecode-source-map",
    "language/compiler/ir-to-bytecode",
    "language/compiler/ir-to-bytecode/syntax",
    "language/dijets-framework",
    "language/dijets-framework/releases",
    "language/dijets-tools/df-cli",
    "language/dijets-tools/dijets-events-fetcher",
    "language/dijets-tools/dijets-keygen",
    "language/dijets-tools/dijets-read-write-set",
    "language/dijets-tools/dijets-validator-interface",
    "language/dijets-tools/e2e-tests-replay",
    "language/dijets-tools/oncall-trainer",
    "language/dijets-tools/transaction-replay",
    "language/dijets-tools/writeset-transaction-generator",
    "language/dijets-transaction-benchmarks",
    "language/dijets-vm",
    "language/dijets-vm/mvhashmap",
    "language/e2e-testsuite",
    "language/ir-testsuite",
    "language/move-binary-format",
    "language/move-binary-format/serializer-tests",
    "language/move-command-line-common",
    "language/move-core/types",
    "language/move-ir/types",
    "language/move-lang",
    "language/move-lang/functional-tests",
    "language/move-model",
    "language/move-prover",
    "language/move-prover/abigen",
    "language/move-prover/boogie-backend",
    "language/move-prover/bytecode",
    "language/move-prover/docgen",
    "language/move-prover/errmapgen",
    "language/move-prover/interpreter",
    "language/move-prover/interpreter/crypto",
    "language/move-prover/interpreter-testsuite",
    "language/move-prover/lab",
    "language/move-prover/mutation",
    "language/move-prover/test-utils",
    "language/move-stdlib",
    "language/move-symbol-pool",
    "language/move-vm/integration-tests",
    "language/move-vm/runtime",
    "language/move-vm/test-utils",
    "language/move-vm/transactional-tests",
    "language/move-vm/types",
    "language/testing-infra/dijets-transactional-test-harness",
    "language/testing-infra/e2e-tests",
    "language/testing-infra/functional-tests",
    "language/testing-infra/module-generation",
    "language/testing-infra/test-generation",
    "language/testing-infra/transactional-test-runner",
    "language/tools/dijets-resource-viewer",
    "language/tools/disassembler",
    "language/tools/genesis-viewer",
    "language/tools/move-bytecode-utils",
    "language/tools/move-bytecode-viewer",
    "language/tools/move-cli",
    "language/tools/move-coverage",
    "language/tools/move-explain",
    "language/tools/move-package",
    "language/tools/move-unit-test",
    "language/tools/read-write-set",
    "language/tools/read-write-set/types",
    "language/tools/resource-viewer",
    "language/tools/vm-genesis",
    "language/transaction-builder/generator",
    "mempool",
    "network",
    "network/builder",
    "network/discovery",
    "network/memsocket",
    "network/netcore",
    "network/socket-bench-server",
    "sdk",
    "sdk/client",
    "sdk/compatibility",
    "sdk/offchain",
    "sdk/transaction-builder",
    "secure/key-manager",
    "secure/net",
    "secure/push-metrics",
    "secure/storage",
    "secure/storage/github",
    "secure/storage/vault",
    "state-sync",
    "storage/accumulator",
    "storage/backup/backup-cli",
    "storage/backup/backup-service",
    "storage/dijetsdb",
    "storage/dijetsdb-benchmark",
    "storage/dijetssum",
    "storage/inspector",
    "storage/jellyfish-merkle",
    "storage/schemadb",
    "storage/scratchpad",
    "storage/scratchpad-benchmark",
    "storage/state-view",
    "storage/storage-client",
    "storage/storage-interface",
    "storage/storage-service",
    "testsuite/cli",
    "testsuite/cli/dijets-wallet",
    "testsuite/cluster-test",
    "testsuite/compatibility-test",
    "testsuite/dijets-fuzzer",
    "testsuite/dijets-fuzzer/fuzz",
    "testsuite/dijets-swarm",
    "testsuite/forge",
    "testsuite/forge-cli",
    "testsuite/generate-format",
    "testsuite/smoke-test",
    "testsuite/smoke-test/attribute",
    "types",
    "vm-validator",
]

# NOTE: default-members is the complete list of binaries that form the "production Dijets codebase". These members should
# never include crates that require fuzzing features or test features. These are the crates we want built with no extra
# test-only code included.
#
# For more, see the "Conditional compilation for tests" section in documentation/coding_guidelines.md.
default-members = [
    "common/rate-limiter",
    "config/generate-key",
    "config/management/genesis",
    "config/management/operational",
    "config/seed-peer-generator",
    "consensus/safety-rules",
    "client/assets-proof",
    "client/faucet",
    "client/swiss-knife",
    "execution/db-bootstrapper",
    "execution/execution-correctness",
    "language/compiler",
    "language/dijets-framework",
    "language/move-prover",
    "language/move-prover/lab",
    "language/move-prover/mutation",
    "language/move-lang",
    "language/move-stdlib",
    "language/tools/disassembler",
    "language/tools/move-bytecode-viewer",
    "language/tools/move-package",
    "language/tools/genesis-viewer",
    "language/tools/move-cli",
    "language/tools/move-coverage",
    "language/tools/move-unit-test",
    "language/dijets-tools/df-cli",
    "language/dijets-tools/dijets-events-fetcher",
    "language/dijets-tools/transaction-replay",
    "language/dijets-tools/writeset-transaction-generator",
    "language/tools/move-explain",
    "language/transaction-builder/generator",
    "dijets-node",
    "sdk",
    "secure/key-manager",
    "storage/backup/backup-cli",
    "storage/dijetssum",
    "storage/inspector",
]

[profile.release]
debug = true

[profile.bench]
debug = true

# Build guppy in opt mode so that x commands are faster.
[profile.dev.package.guppy]
opt-level = 3
