[package]
name = "consensus"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets consensus"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1.42"
byteorder = { version = "1.4.3", default-features = false }
bytes = "1.0.1"
fail = "0.4.0"
futures = "0.3.12"
itertools = { version = "0.10.0", default-features = false }
mirai-annotations = { version = "1.10.1", default-features = false }
num-derive = { version = "0.3.3", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
once_cell = "1.7.2"
proptest = { version = "1.0.0", optional = true }
rand = { version = "0.8.3", default-features = false }
serde = { version = "1.0.124", default-features = false }
serde_json = "1.0.64"
termion = { version = "1.5.6", default-features = false }
thiserror = "1.0.24"
tokio = { version = "1.8.1", features = ["full"] }

channel = { path = "../common/channel" }
consensus-types = { path = "consensus-types", default-features = false }
execution-correctness = { path = "../execution/execution-correctness" }
executor = { path = "../execution/executor" }
executor-types = { path = "../execution/executor-types" }
fallible = { path = "../common/fallible" }
bcs = "0.1.2"
dijets-config = { path = "../config" }
dijets-crypto = { path = "../crypto/crypto" }
dijets-logger = { path = "../common/logger" }
dijets-mempool = { path = "../mempool" }
dijets-metrics = { path = "../common/metrics" }
dijets-infallible = { path = "../common/infallible" }
dijets-secure-storage = { path = "../secure/storage" }
dijets-temppath = { path = "../common/temppath" }
dijets-types = { path = "../types" }
dijets-vm = { path = "../language/dijets-vm" }
dijets-workspace-hack = { path = "../common/workspace-hack" }
network = { path = "../network" }
safety-rules = { path = "safety-rules" }
short-hex-str = { path = "../common/short-hex-str" }
state-sync = { path = "../state-sync" }
schemadb = { path = "../storage/schemadb" }
storage-interface = { path = "../storage/storage-interface" }
subscription-service = { path = "../common/subscription-service" }

[dev-dependencies]
proptest = "1.0.0"
tempfile = "3.2.0"

consensus-types = { path = "consensus-types", default-features = false, features = ["fuzzing"] }
executor-test-helpers = { path = "../execution/executor-test-helpers" }
dijets-config = { path = "../config", features = ["fuzzing"] }
dijets-mempool = { path = "../mempool", features = ["fuzzing"] }
safety-rules = { path = "safety-rules", features = ["testing"] }
vm-genesis = { path = "../language/tools/vm-genesis" }
vm-validator = { path = "../vm-validator" }

[features]
default = []
fuzzing = ["proptest", "consensus-types/fuzzing", "dijets-config/fuzzing", "dijets-crypto/fuzzing", "dijets-mempool/fuzzing", "dijets-types/fuzzing", "safety-rules/testing"]
failpoints = ["fail/failpoints"]
