[package]
name = "dijets-json-rpc"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets rpc endpoint"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
fail = "0.4.0"
futures = "0.3.12"
hex = "0.4.3"
hyper = "0.14.4"
once_cell = "1.7.2"
rand = "0.8.3"
serde_json = "1.0.64"
serde = { version = "1.0.124", features = ["derive"], default-features = false }
tokio = { version = "1.8.1", features = ["full"] }
tokio-retry = "0.3.0"
tokio-stream = "0.1.4"
tokio-tungstenite = "0.14.0"
warp = { version = "0.3.0", features = ["default", "tls", "tokio-rustls", "tokio-tungstenite", "websocket"] }
reqwest = { version = "0.11.2", features = ["blocking", "json"], default_features = false, optional = true }
proptest = { version = "1.0.0", optional = true }
regex = { version = "1.4.3", default-features = false, features = ["std", "perf"] }

bcs = "0.1.2"
dijets-framework-releases= { path = "../language/dijets-framework/releases" }
dijets-client = { path = "../sdk/client", optional = true }
dijets-config = { path = "../config" }
dijets-crypto = { path = "../crypto/crypto" }
dijetsdb = { path = "../storage/dijetsdb", optional = true }
dijets-json-rpc-types = { path = "./types", package = "dijets-json-rpc-types" }
dijets-infallible = { path = "../common/infallible" }
dijets-logger = { path = "../common/logger" }
dijets-mempool = { path = "../mempool" }
dijets-metrics = { path = "../common/metrics" }
dijets-proptest-helpers = { path = "../common/proptest-helpers", optional = true }
dijets-types = { path = "../types" }
dijets-temppath = { path = "../common/temppath", optional = true }
dijets-workspace-hack = { path = "../common/workspace-hack" }
executor = { path = "../execution/executor" , optional = true}
executor-types = { path = "../execution/executor-types" , optional = true}
move-core-types = { path = "../language/move-core/types" }
move-vm-types = { path = "../language/move-vm/types", optional = true }
network = { path = "../network" }
resource-viewer = { path = "../language/tools/resource-viewer" }
scratchpad = { path = "../storage/scratchpad", optional = true }
storage-interface = { path = "../storage/storage-interface" }
thiserror = "1.0.24"
vm-genesis = { path = "../language/tools/vm-genesis", optional = true }

[dev-dependencies]
proptest = "1.0.0"
reqwest = { version = "0.11.2", features = ["blocking", "json"], default_features = false }
rand = { version = "0.8.3" }

generate-key = { path = "../config/generate-key" }
dijetsdb = { path = "../storage/dijetsdb", features = ["fuzzing"] }
dijets-genesis-tool = {path = "../config/management/genesis", features = ["testing"] }
dijets-client = { path = "../sdk/client" }
dijets-mempool = { path = "../mempool", features = ["fuzzing"] }
dijets-proptest-helpers = { path = "../common/proptest-helpers" }
dijets-temppath = { path = "../common/temppath" }
dijets-types = { path = "../types", features = ["fuzzing"] }
vm-validator = { path = "../vm-validator" }
dijets-framework-releases= { path = "../language/dijets-framework/releases" }
vm-genesis = { path = "../language/tools/vm-genesis" }
executor = { path = "../execution/executor" }
executor-types = { path = "../execution/executor-types" }
scratchpad = { path = "../storage/scratchpad" }
move-vm-types = { path = "../language/move-vm/types" }
dijets-transaction-builder = { path = "../sdk/transaction-builder" }
dijets-sdk = { path = "../sdk" }

[features]
fuzzing = ["proptest", "dijets-client", "dijets-mempool/fuzzing", "dijetsdb/fuzzing", "dijets-proptest-helpers", "dijets-temppath", "executor", "executor-types", "move-vm-types", "reqwest", "scratchpad", "vm-genesis"]
failpoints = ["fail/failpoints"]
