[package]
name = "network"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets network"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bytes = { version = "1.0.1", features = ["serde"] }
futures = "0.3.12"
futures-util = "0.3.12"
hex = "0.4.3"
once_cell = "1.7.2"
pin-project = "1.0.5"
proptest = { version = "1.0.0", default-features = true, optional = true }
proptest-derive = { version = "0.3.0", optional = true }
rand = { version = "0.8.3", features = ["small_rng"] }
rand_core = { version = "0.6.2", optional = true }
serde = { version = "1.0.124", default-features = false }
serde_bytes = "0.11.5"
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.8.1", features = ["full"] }
tokio-retry = "0.3.0"
tokio-stream = "0.1.4"
tokio-util = { version = "0.6.4", features = ["compat", "codec"] }

bitvec = { path = "../common/bitvec", package = "dijets-bitvec" }
channel = { path = "../common/channel" }
bcs = "0.1.2"
dijets-config = { path = "../config" }
dijets-crypto = { path = "../crypto/crypto" }
dijets-crypto-derive = { path = "../crypto/crypto-derive" }
dijets-infallible = { path = "../common/infallible" }
dijets-logger = { path = "../common/logger" }
dijets-metrics = { path = "../common/metrics" }
dijets-proptest-helpers = { path = "../common/proptest-helpers", optional = true }
dijets-rate-limiter = { path = "../common/rate-limiter"}
dijets-time-service = { path = "../common/time-service", features = ["async"] }
dijets-types = { path = "../types" }
dijets-workspace-hack = { path = "../common/workspace-hack" }
memsocket = { path = "./memsocket", optional = true }
netcore = { path = "./netcore" }
num-variants = { path = "../common/num-variants" }
short-hex-str = { path = "../common/short-hex-str" }

[dev-dependencies]
criterion = "0.3.4"
dijets-proptest-helpers = { path = "../common/proptest-helpers" }
dijets-types = { path = "../types", features = ["fuzzing"] }
maplit = "1.0.2"
memsocket = { path = "./memsocket" }
network-builder = {path = "./builder"}
proptest = { version = "1.0.0", default-features = true }
proptest-derive = { version = "0.3.0" }
rand_core = "0.6.2"
serial_test = "0.5.1"
socket-bench-server = { path = "./socket-bench-server" }

[features]
default = []
fuzzing = ["bitvec/fuzzing", "dijets-crypto/fuzzing", "dijets-types/fuzzing", "dijets-proptest-helpers", "dijets-time-service/testing", "dijets-types/fuzzing", "memsocket/testing", "netcore/fuzzing", "proptest", "proptest-derive", "rand_core"]
testing = ["dijets-config/testing", "dijets-time-service/testing", "memsocket/testing", "netcore/testing"]

[[bench]]
name = "socket_bench"
harness = false

[[bench]]
name = "network_bench"
harness = false
