[package]
name = "state-sync"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets state synchronizer (state sync)"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
bcs = "0.1.2"
fail = "0.4.0"
futures = "0.3.12"
itertools = { version = "0.10.0", default-features = false }
once_cell = "1.7.2"
proptest = { version = "1.0.0", optional = true }
rand = "0.8.3"
serde = { version = "1.0.124", default-features = false }
thiserror = "1.0.24"
tokio = { version = "1.8.1", features = ["full"] }
tokio-stream = "0.1.4"

channel = { path = "../common/channel" }
dijets-config = { path = "../config" }
dijets-crypto = { path = "../crypto/crypto" }
dijets-infallible = { path = "../common/infallible" }
dijets-logger = { path = "../common/logger" }
dijets-mempool = { path = "../mempool"}
dijets-metrics = { path = "../common/metrics" }
dijets-proptest-helpers = { path = "../common/proptest-helpers", optional = true }
dijets-temppath = { path = "../common/temppath" }
dijets-types = { path = "../types" }
dijets-vm = { path = "../language/dijets-vm" }
dijets-workspace-hack = { path = "../common/workspace-hack" }
dijetsdb = { path = "../storage/dijetsdb", optional = true }
executor = { path = "../execution/executor" }
executor-test-helpers = { path = "../execution/executor-test-helpers", optional = true }
executor-types = { path = "../execution/executor-types" }
memsocket = { path = "../network/memsocket", optional = true }
netcore = { path = "../network/netcore" }
network = { path = "../network" }
storage-interface = { path = "../storage/storage-interface" }
subscription-service = { path = "../common/subscription-service" }
vm-genesis = { path = "../language/tools/vm-genesis", optional = true }

[dev-dependencies]
bytes = "1.0.1"
proptest = "1.0.0"

channel = { path = "../common/channel" }
dijets-framework-releases= { path = "../language/dijets-framework/releases" }
dijets-crypto = { path = "../crypto/crypto" }
dijets-genesis-tool = {path = "../config/management/genesis", features = ["testing"] }
dijets-mempool = { path = "../mempool", features = ["fuzzing"] }
dijets-proptest-helpers = { path = "../common/proptest-helpers" }
dijetsdb = { path = "../storage/dijetsdb" }
executor-test-helpers = { path = "../execution/executor-test-helpers" }
memsocket = { path = "../network/memsocket" }
network = { path = "../network", features = ["fuzzing", "testing"] }
network-builder = { path  = "../network/builder" }
storage-service = { path = "../storage/storage-service" }
subscription-service = { path = "../common/subscription-service" }
dijets-transaction-builder = { path = "../sdk/transaction-builder" }
dijets-time-service = { path = "../common/time-service", features = ["testing"] }
vm-genesis = { path = "../language/tools/vm-genesis", features = ["fuzzing"] }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["vm-genesis", "proptest", "executor-test-helpers", "dijets-config/fuzzing", "dijets-mempool/fuzzing", "dijets-types/fuzzing", "dijets-proptest-helpers", "memsocket/fuzzing"]
