[package]
name = "dijets-assets-proof"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets Proof-of-Assets CLI"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
serde = { version = "1.0.124", default-features = false }
serde_json = "1.0.64"
structopt = "0.3.21"

bcs = "0.1.2"
dijets-client = { path = "../../sdk/client", features = ["blocking"], default-features = false }
dijets-crypto = { path = "../../crypto/crypto" }
dijets-types = { path = "../../types" }
move-core-types = { path = "../../language/move-core/types" }

[dev-dependencies]
dijets-workspace-hack = { path = "../../common/workspace-hack" }
