[package]
name = "dijets-faucet"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets Testnet utility services"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bcs = "0.1.2"
hex = "0.4.3"
rand = "0.8.3"
reqwest = { version = "0.11.2", features = ["blocking"], default-features = false }
serde = { version = "1.0.124", features = ["derive"] }
structopt = "0.3.21"
tokio = { version = "1.8.1", features = ["full"] }
warp = "0.3.0"

generate-key = { path = "../../config/generate-key" }
dijets-logger = { path = "../../common/logger" }
dijets-sdk = { path = "../../sdk" }

dijets-workspace-hack = { path = "../../common/workspace-hack" }

[dev-dependencies]
serde_json = "1.0.64"
tempfile = "3.2.0"

dijets-config = { path = "../../config" }
dijets-infallible = { path = "../../common/infallible" }
