[package]
name = "dijets-bitvec"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets safe bitvec implementation"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
dijets-workspace-hack = { path = "../workspace-hack" }
proptest = { version = "1.0.0", default-features = true, optional = true }
proptest-derive = { version = "0.3.0", optional = true }
serde = { version = "1.0.124", features = ["derive"] }
serde_bytes = "0.11.5"

[dev-dependencies]
bcs = "0.1.2"
dijets-proptest-helpers = { path = "../proptest-helpers"}
proptest = { version = "1.0.0", default-features = true }
proptest-derive = { version = "0.3.0" }

[features]
fuzzing = ["proptest-derive", "proptest"]
