[package]
name = "dijets-documentation-tool"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets transaction-builder"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
serde_yaml = "0.8.17"
serde-reflection = "0.3.2"
serde-generate = "0.19.1"
anyhow = "1.0.38"
regex = "1.4.3"
structopt = "0.3.21"
once_cell = "1.7.2"

dijets-workspace-hack = { path = "../workspace-hack" }

[dev-dependencies]
serde = { version = "1.0.124", features = ["derive"] }
tempfile = "3.2.0"

[features]
default = []

[[bin]]
name = "dijetsdoc"
path = "src/main.rs"
test = false
