[package]
name = "dijets-logger"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets dijets-logger"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

# Do NOT add any inter-project dependencies.
# This is to avoid ever having a circular dependency with the dijets-logger crate.
[dependencies]
backtrace = { version = "0.3", features = ["serde"] }
chrono = "0.4.19"
erased-serde = "0.3.13"
hostname = "0.3.1"
dijets-log-derive = { path = "derive" }
dijets-infallible = { path = "../infallible" }
dijets-workspace-hack = { path = "../workspace-hack" }
once_cell = "1.7.2"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
prometheus = { version = "0.12.0", default-features = false }
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
