[package]
name = "dijets-metrics"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets dijets-metrics"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"
futures = "0.3.12"
hyper = { version = "0.14.4", features = ["full"] }
once_cell = "1.7.2"
prometheus = { version = "0.12.0", default-features = false }
serde_json = "1.0.64"
tokio = { version = "1.8.1", features = ["full"] }

dijets-logger = { path = "../logger" }
dijets-metrics-core = { path = "../metrics-core" }
dijets-workspace-hack = { path = "../workspace-hack" }

[dev-dependencies]
rusty-fork = "0.3.0"
assert_approx_eq = "1.1.0"
