[package]
name = "proxy"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets proxy"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
ipnet = "2.3"

dijets-workspace-hack = { path = "../workspace-hack" }
