[package]
name = "dijets-rate-limiter"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets implementation for rate limiter"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
dijets-infallible = { path= "../infallible" }
dijets-workspace-hack = { path = "../workspace-hack" }
dijets-logger = { path = "../logger" }
dijets-metrics = { path = "../metrics" }
futures = "0.3.12"
pin-project = "1.0.5"
tokio = { version = "1.8.1", features = ["full"] }
tokio-util = { version = "0.6.4", features = ["compat"] }
