[package]
name = "subscription-service"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets subscription service"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0.38"

dijets-types = { path = "../../types" }
dijets-workspace-hack = { path = "../workspace-hack" }
channel = { path = "../channel" }
