[package]
name = "dijets-temppath"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets dijets-temppath"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
hex = "0.4.3"
dijets-workspace-hack = { path = "../workspace-hack" }
rand = "0.8.3"
