[package]
name = "dijets-global-constants"
version = "0.1.0"
authors = ["Dijets Association <opensource@dijets.com>"]
description = "Dijets's global constant crate: the source of truth for constant definitions that span multiple crates"
repository = "https://github.com/dijets/dijets"
homepage = "https://dijets.com"
license = "Apache-2.0"
publish = false
edition = "2018"
